fixed primos_logo size on mobile, fixed google maps route to link, now correctly uses User Location as the starting point in the route

--- a/website.css
+++ b/website.css
@@ -235,8 +235,8 @@ header .header-text-content p a {
     }
 
     .header-logo {
-        max-width: 60px; /* Further shrink logo for very small screens */
-        max-height: 60px; /* Further shrink logo for very small screens */
+        max-width: 200px; /* Further shrink logo for very small screens */
+        max-height: 200px; /* Further shrink logo for very small screens */
     }
 
     header h4 {
@@ -316,5 +316,5 @@ header .header-text-content p a {
     align-items: center;
     justify-content: center; /* Center the images horizontally */
     gap: 10px; /* Space between the images */
-    margin-top: 0px; /* Add some space above the row */
+    margin-top: 10px; /* Add some space above the row */
 }
